fixed header image gap

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -5,6 +5,7 @@
     width: 100%;
     top: -7rem;
     position: fixed;
+    left: -2px;
     // padding: 3rem;
     z-index: -3;
 
